--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  - go test -coverprofile=coverage.out ./...
+  - go test -coverprofile=c.out ./...
 
 after_script:
-  - ./cc-test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 notifications:
   email:
